--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -64,7 +64,7 @@ jobs:
     - name: config
       working-directory: _build
       run: |
-        perl ..\Configure no-makedepend no-shared VC-WIN64A-masm
+        perl ..\Configure no-makedepend no-shared VC-WIN64-ARM-masm
         perl configdata.pm --dump
     - name: build
       working-directory: _build
@@ -88,7 +88,7 @@ jobs:
     - name: config
       working-directory: _build
       run: |
-        perl ..\Configure no-makedepend no-deprecated no-asm -DOPENSSL_SMALL_FOOTPRINT VC-WIN64A
+        perl ..\Configure no-makedepend no-deprecated no-asm -DOPENSSL_SMALL_FOOTPRINT VC-WIN64-ARM
         perl configdata.pm --dump
     - name: build
       working-directory: _build
